@@ -22,21 +22,28 @@
 #include <sys/stat.h>
 #include <dlfcn.h>
 
-void *load_shared_library(struct config_tree *cft, const char *libname,
-			  const char *desc)
+static void _get_library_path(struct config_tree *cft, const char *libname,
+			      char *path, int path_len)
 {
-	char path[PATH_MAX];
 	struct stat info;
 	const char *lib_dir;
-	void *library;
 
 	/* If libname doesn't begin with '/' then use lib_dir/libname,
 	 * if present */
 	if (libname[0] == '/' ||
 	    !(lib_dir = find_config_str(cft->root, "global/library_dir", 0)) ||
-	    (lvm_snprintf(path, sizeof(path), "%s/%s", lib_dir,
+	    (lvm_snprintf(path, path_len, "%s/%s", lib_dir,
 			  libname) == -1) || stat(path, &info) == -1)
-		strncpy(path, libname, sizeof(path));
+		strncpy(path, libname, path_len);
+}
+
+void *load_shared_library(struct config_tree *cft, const char *libname,
+			  const char *desc)
+{
+	char path[PATH_MAX];
+	void *library;
+
+	_get_library_path(cft, libname, path, sizeof(path));
 
 	log_very_verbose("Opening shared %s library %s", desc, path);
 
